[package]
name = "blockchain"
version = "0.1.0"
authors = ["CHRISTINA KAO <KAORENLLC@GMAIL.COM>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.38"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "0.7.0"
